syntax = "proto3";

package reward;

service RewardService {
  rpc GetListRewardEarned(GetListRewardEarnedRequest) returns (GetListRewardEarnedResponse);
  rpc GetTotalRewardEarned(GetTotalRewardEarnedRequest) returns (GetTotalRewardEarnedResponse);
}

message GetListRewardEarnedRequest {
  string user_id = 1;
  repeated int32 wallets = 2;
  int32 from_time = 3;
  int32 to_time = 4;
}

message GetTotalRewardEarnedRequest {
  string user_id = 1;
  repeated int32 wallets = 2;
  int32 from_time = 3;
  int32 to_time = 4;
  string currency = 5;
}

message GetTotalRewardEarnedResponse {
  string data = 1;
}

message RewardHistory {
  string id = 1;
  int32 campaign_id = 2;
  int32 mission_id = 3;
  int32 user_id = 4;
  string amount = 5;
  string note = 6;
  string currency = 7;
  string user_type = 8;
  string wallet = 9;
  int32 status = 10;
  int32 created_at = 11;
  string reference_id = 12;
  string balance_response = 13;
}

message GetListRewardEarnedResponse {
  repeated RewardHistory data = 1;
}
